<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_16dp"
    android:background="@drawable/background_dialog"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_16dp">

    <ImageView
        android:id="@+id/dialog_icon"
        android:layout_width="@dimen/dialog_icon_size"
        android:layout_height="@dimen/dialog_icon_size"
        android:layout_marginTop="@dimen/margin_8dp"
        android:src="@drawable/ic_student_permission_full" />

    <EditText
        android:id="@+id/permission_message"
        style="@style/input_text_field"
        android:layout_marginVertical="@dimen/margin_8dp"
        android:background="@drawable/edit_text_background_style"
        android:hint="@string/permission_hint"
        tools:layout_editor_absoluteX="0dp" />


    <TextView
        android:id="@+id/text_warning"
        style="@style/TextDialogStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:text="@string/add_student" />

    <LinearLayout
        android:id="@+id/button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_add_btn"
            style="@style/ButtonDialog.add"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:maxLines="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/ok_add_btn"
            style="@style/ButtonDialog.add"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>