<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <View

                android:layout_width="32dp"
                android:layout_height="4dp"
                android:background="@color/black" />
        </androidx.cardview.widget.CardView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/permission_filter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line"
            android:layout_alignParentBottom="true"
            android:paddingStart="@dimen/margin_16dp"
            android:paddingEnd="@dimen/margin_16dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:text="@string/filter"
                android:textColor="@color/black_70"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/department_permission_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/department"
                android:textColor="@color/black_50"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Spinner
                android:id="@+id/department_spinner_permission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/department_permission_text"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@+id/department_permission_text"
                app:layout_constraintBottom_toBottomOf="@+id/department_permission_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/department_permission_text" />

            <TextView
                android:id="@+id/section_permission_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/department_permission_text"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/section"
                android:textColor="@color/black_50"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/department_spinner_permission" />

            <Spinner
                android:id="@+id/section_spinner_permission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@+id/department_permission_text"
                app:layout_constraintBottom_toBottomOf="@+id/section_permission_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/section_permission_text" />

            <EditText
                android:id="@+id/permission_student_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/search_permission"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:alpha=".5"
                android:background="@drawable/border"
                android:enabled="false"
                android:gravity="start"
                android:hint="@string/studentId"
                android:inputType="number"
                android:paddingStart="@dimen/margin_8dp"
                android:paddingTop="@dimen/margin_4dp"
                android:paddingEnd="@dimen/margin_8dp"
                android:paddingBottom="@dimen/margin_4dp"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintEnd_toStartOf="@+id/switchToFilterById"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/section_permission_text" />

            <Button
                android:id="@+id/search_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/black_100"
                android:text="@string/showResult"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/permission_student_ID" />

            <Switch
                android:id="@+id/switchToFilterById"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/filterById"
                android:textColor="@color/black_50"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/permission_student_ID"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/permission_student_ID" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
